--- a/pc/control/src/ctrl_utils/CMakeLists.txt
+++ b/pc/control/src/ctrl_utils/CMakeLists.txt
@@ -8,10 +8,12 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 set(CTRL_UTILS_LIB_SRC
     # logging
     logging/utils_log.cpp
+    # vis
+    vis/quadvis_data_transmitter.cpp
 )
 add_library(ctrl_utils STATIC ${CTRL_UTILS_LIB_SRC})
 #add_definitions(-DENABLE_LOG)
-#target_link_libraries(ctrl_utils g3logger)
+target_link_libraries(ctrl_utils ${LCM_LIBRARIES})
 
 # Add executables
 #add_executable(test_graph test_graph.cpp)
