--- a/pc/planning/src/apps/CMakeLists.txt
+++ b/pc/planning/src/apps/CMakeLists.txt
@@ -7,6 +7,11 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 find_package(OpenCV REQUIRED)
 
 # Add executables
+## applications
+add_executable(quadsim_planner quadsim_planner.cpp)
+target_link_libraries(quadsim_planner map planner ${OpenCV_LIBS} ${LCM_LIBRARIES})
+
+## tests
 add_executable(graph_example graph_example.cpp)
 target_link_libraries(graph_example vis map ${OpenCV_LIBS})
 
