--- a/pc/planning/src/local3d/CMakeLists.txt
+++ b/pc/planning/src/local3d/CMakeLists.txt
@@ -11,20 +11,19 @@ pkg_search_module(LCM REQUIRED lcm)
 # Add libraries
 set(LOCAL3DMAP_LIB_SRC
     octomap_server.cpp
-    cube_array_builder.cpp
 )
-add_library(octomap_utils STATIC ${LOCAL3DMAP_LIB_SRC})
-target_link_libraries(octomap_utils map cubearray ${Octomap_LIBS} ${LCM_LIBRARIES})
+add_library(local3d STATIC ${LOCAL3DMAP_LIB_SRC})
+target_link_libraries(local3d map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 # Add executables
 add_executable(octree_example octomap_example.cpp)
 target_link_libraries(octree_example ${Octomap_LIBS})
 
 add_executable(octomap_server_node octomap_server_node.cpp)
-target_link_libraries(octomap_server_node octomap_utils ${Octomap_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(octomap_server_node local3d map geometry ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 add_executable(test_octomap test_octomap.cpp)
-target_link_libraries(test_octomap octomap_utils ${Octomap_LIBS})
+target_link_libraries(test_octomap local3d ${Octomap_LIBS})
 
 add_executable(test_cubebuilder test_cubebuilder.cpp)
-target_link_libraries(test_cubebuilder map octomap_utils ${Octomap_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(test_cubebuilder map geometry local3d ${Octomap_LIBS} ${LCM_LIBRARIES})
