--- a/pc/planning/src/planner/CMakeLists.txt
+++ b/pc/planning/src/planner/CMakeLists.txt
@@ -14,11 +14,11 @@ set(PLANNER_LIB_SRC
     quad_planner.cpp
 )
 add_library(planner STATIC ${PLANNER_LIB_SRC})
-target_link_libraries(planner map ompl rrtstarkd ${OpenCV_LIBS} ${Octomap_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(planner geometry map ompl rrtstarkd ${OpenCV_LIBS} ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 # Add executables
 add_executable(test_local test_local.cpp)
 target_link_libraries(test_local planner)
 
 add_executable(test_global test_global.cpp)
-target_link_libraries(test_global map planner qtree)
+target_link_libraries(test_global map planner geometry)
