--- a/pc/planning/src/vis/CMakeLists.txt
+++ b/pc/planning/src/vis/CMakeLists.txt
@@ -14,7 +14,7 @@ set(VIS_LIB_SRC
     vis_utils.cpp
 )
 add_library(vis STATIC ${VIS_LIB_SRC})
-target_link_libraries(vis map ${OpenCV_LIBS})
+target_link_libraries(vis map geometry ${OpenCV_LIBS})
 
 # Add executables
 #add_executable(test_graph test_graph.cpp)
