--- a/pc/planning/src/path_repair/CMakeLists.txt
+++ b/pc/planning/src/path_repair/CMakeLists.txt
@@ -18,4 +18,4 @@ add_executable(quadsim_pr_planner quadsim_planner.cpp)
 target_link_libraries(quadsim_pr_planner map path_repair ${OpenCV_LIBS} ${LCM_LIBRARIES})
 
 add_executable(graph_combiner graph_combiner.cpp)
-target_link_libraries(graph_combiner map octomap_utils ${Octomap_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(graph_combiner map local3d ${Octomap_LIBS} ${LCM_LIBRARIES})
