updated quad data transmitter

--- a/pc/control/src/quad_ctrl/CMakeLists.txt
+++ b/pc/control/src/quad_ctrl/CMakeLists.txt
@@ -16,13 +16,15 @@ set(QUADCON_LIB_SRC
     controller/pos_quat_con.cpp
     # motion management
     motion_server/motion_server.cpp
+    # data transmitter
+    data_trans/quad_data_transmitter.cpp
 )
 add_library(quad_ctrl STATIC ${QUADCON_LIB_SRC})
 if (ENABLE_G3LOG)
   add_definitions(-DENABLE_LOG)
   target_link_libraries(quad_ctrl ctrl_utils g3logger ${LCM_LIBRARIES})
 else(ENABLE_G3LOG)
-  target_link_libraries(quad_ctrl ctrl_utils ${LCM_LIBRARIES})
+  target_link_libraries(quad_ctrl ${LCM_LIBRARIES})
 endif (ENABLE_G3LOG)
 
 # Add executables
