cleaned up cmake and tests

--- a/pc/CMakeLists.txt
+++ b/pc/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(srcl_ctrl)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")
-
 ## Put all binary files into /bin and libraries into /lib
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
@@ -21,9 +19,6 @@ endif(ENABLE_G3LOG)
 
 set(BUILD_TESTS on)
 
-## Include files for LCM
-include_directories(${CMAKE_BINARY_DIR}/include)
-
 ## Config eigen include directories
 include_directories(${CMAKE_SOURCE_DIR}/third_party/)
 
@@ -33,9 +28,6 @@ include_directories(${CMAKE_SOURCE_DIR}/third_party/octomap-1.8.0/octovis/includ
 include_directories(${CMAKE_SOURCE_DIR}/third_party/octomap-1.8.0/dynamicEDT3D/include)
 set(Octomap_LIBS octomap octomath)
 
-## Other include directories
-include_directories(${CMAKE_SOURCE_DIR})
-
 ## Config ompl include directories
 include_directories(${CMAKE_SOURCE_DIR}/third_party/ompl-1.2.1/src)
 
@@ -44,7 +36,27 @@ include_directories(${CMAKE_SOURCE_DIR}/third_party/ompl-1.2.1/src)
 # SMP is header only, but it depends on 3rd party libraries that needs to be linked against
 #set(SMP_KARAMAN_LIB smp_karaman_dep_lib)
 
+## Other include directories
+include_directories(${CMAKE_SOURCE_DIR})
+
 ## Conditionally add source directories
+## Check dependencies for Comm and Control/Planning module
+find_package(PkgConfig REQUIRED)
+pkg_search_module(LCM REQUIRED lcm)
+
+if(LCM_FOUND)
+	set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
+	include_directories(${LCM_GENERATED_HEADER_PATH})	
+	# Include files for LCM
+    include_directories(${CMAKE_BINARY_DIR}/include)
+	# add comm and control module
+	add_subdirectory(comm)            # <-----------------------------------	
+	add_subdirectory(control)         # <-----------------------------------	
+elseif(LCM_FOUND)
+    message(STATUS "LCM is not found. IPC functions will not work without LCM.")
+	message(STATUS "Key components missing. The comm, control modules and part of planning module will not be built.")
+endif(LCM_FOUND)
+
 ## Check dependencies for GUI module
 find_package(VTK 7.0)
 
@@ -54,21 +66,7 @@ elseif(VTK_FOUND)
 	message(STATUS "GUI module will not be built because not all dependent libraries can be found.")
 endif(VTK_FOUND)
 
-## Check dependencies for Comm and Control module
-find_package(PkgConfig REQUIRED)
-pkg_search_module(LCM REQUIRED lcm)
-
-if(LCM_FOUND)
-	set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
-	include_directories(${LCM_GENERATED_HEADER_PATH})
-	# add comm and control modules
-	add_subdirectory(comm)            # <-----------------------------------
-	add_subdirectory(control)         # <-----------------------------------
-elseif(LCM_FOUND)
-	message(STATUS "IPC is not supported without LCM. The control module and part of the planning module will not be built.")
-endif(LCM_FOUND)
-
-## Add sub source directories
-add_subdirectory(utils)
+## Add other sub source directories
+add_subdirectory(utils)   
 add_subdirectory(planning)
-add_subdirectory(third_party)         # <-----------------------------------
+add_subdirectory(third_party)        
