--- a/pc/planning/CMakeLists.txt
+++ b/pc/planning/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(srcl_planning)
 
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
+
 ## Set compiler to use c++ 11 features
 include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
@@ -18,10 +20,20 @@ endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-## Add sub source directories
-#add_subdirectory(src/quadtree)
-#add_subdirectory(src/square_grid)
-#add_subdirectory(src/cube_array)
+## Conditional add sources
+find_package(GUROBI)
+if (NOT GUROBI_FOUND)
+  message("Gurobi not found. If you want to use Gurobi, set the GUROBI_HOME variable")
+else()
+  message("Gurobi found")
+  include_directories(${GUROBI_INCLUDE_DIRS})
+    
+  add_subdirectory(src/polyopt)        # <-----------------------------------
+  add_subdirectory(src/quad_flat)      # <-----------------------------------
+  add_subdirectory(src/path_repair)    # <-----------------------------------
+endif()
+
+## Add other sub source directories
 add_subdirectory(src/geometry)
 #add_subdirectory(src/graph)
 add_subdirectory(src/map)
@@ -29,10 +41,8 @@ add_subdirectory(src/local3d)
 add_subdirectory(src/vis)
 add_subdirectory(src/rrtstar)
 add_subdirectory(src/planner)
-add_subdirectory(src/path_repair)
+add_subdirectory(src/examples)
 add_subdirectory(src/apps)
-add_subdirectory(src/polyopt)
-add_subdirectory(src/quad_flat)
 
 if(BUILD_TESTS)
     add_subdirectory(src/gtests)
