--- a/pc/planning/src/polyopt/CMakeLists.txt
+++ b/pc/planning/src/polyopt/CMakeLists.txt
@@ -38,3 +38,6 @@ target_link_libraries(test_qp3 polyopt ${GUROBI_LIBRARIES})
 
 add_executable(test_opt tests/test_opt.cpp)
 target_link_libraries(test_opt polyopt ${GUROBI_LIBRARIES})
+
+add_executable(test_corridor tests/test_corridor.cpp)
+target_link_libraries(test_corridor polyopt ${GUROBI_LIBRARIES})
