--- a/pc/planning/src/path_repair/CMakeLists.txt
+++ b/pc/planning/src/path_repair/CMakeLists.txt
@@ -27,5 +27,8 @@ target_link_libraries(graph_combine_exp map local3d utils ${Octomap_LIBS} ${LCM_
 add_executable(test_combiner tests/test_combiner.cpp)
 target_link_libraries(test_combiner map geometry local3d polyopt quadflat utils ${Octomap_LIBS} ${LCM_LIBRARIES})
 
+add_executable(test_tracking tests/test_tracking.cpp)
+target_link_libraries(test_tracking polyopt quadflat utils ${LCM_LIBRARIES})
+
 add_executable(test_cubearray tests/test_cubearray.cpp)
 target_link_libraries(test_cubearray geometry)
