adde sim for 3dr solo, not working yet

--- a/pc/control/CMakeLists.txt
+++ b/pc/control/CMakeLists.txt
@@ -23,4 +23,5 @@ add_subdirectory(src/ctrl_utils)
 add_subdirectory(src/vrep_sim)
 add_subdirectory(src/quad_ctrl)
 add_subdirectory(src/quad_sim)
+add_subdirectory(src/quad_solo_sim)
 add_subdirectory(src/apps)
