cleaned up code, improved quad_ctrl

--- a/pc/control/src/quad_ctrl/CMakeLists.txt
+++ b/pc/control/src/quad_ctrl/CMakeLists.txt
@@ -8,7 +8,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 set(QUADCON_LIB_SRC
     # state estimator
     estimator/att_estimator.cpp
-    estimator/quad_state.cpp
+    # data types
+    data_types/quad_state.cpp
     # controller
     controller/att_euler_con.cpp
     controller/pos_euler_con.cpp
@@ -31,5 +32,5 @@ endif (ENABLE_G3LOG)
 add_executable(quad_motion_client motion_server/motion_client.cpp)
 target_link_libraries(quad_motion_client ${LCM_LIBRARIES})
 
-add_executable(pos_step controller/tests/pos_step_response.cpp)
-target_link_libraries(pos_step ${LCM_LIBRARIES}) 
+#add_executable(pos_step controller/tests/pos_step_response.cpp)
+#target_link_libraries(pos_step ${LCM_LIBRARIES}) 
