issue to be resolved in logging

--- a/pc/CMakeLists.txt
+++ b/pc/CMakeLists.txt
@@ -12,7 +12,7 @@ set(ENABLE_G3LOG on)
 if(ENABLE_G3LOG)
 	message( "-- Enable logging with g3log -- Yes" )
 	message( "-- Deafult log directory: srcl_ctrl/control/log " )
-	include_directories(${CMAKE_SOURCE_DIR}/third_party/g3log_srcl/src)
+	include_directories(${CMAKE_SOURCE_DIR}/third_party/g3log/src)
 else(ENABLE_G3LOG)
 	message( "-- Enable logging with g3log -- No" )
 endif(ENABLE_G3LOG)
