--- a/pc/control/src/quad_sim/CMakeLists.txt
+++ b/pc/control/src/quad_sim/CMakeLists.txt
@@ -14,10 +14,11 @@ set(QUADSIM_LIB_SRC
 add_library(quadsim STATIC ${QUADSIM_LIB_SRC})
 if (ENABLE_G3LOG)
 	add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255 -DENABLE_LOG)
+	target_link_libraries(quadsim vrep_sim quad_ctrl ctrl_utils ${LCM_LIBRARIES})
 else (ENABLE_G3LOG)
 	add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255)
+	target_link_libraries(quadsim vrep_sim quad_ctrl ${LCM_LIBRARIES})
 endif (ENABLE_G3LOG)
-target_link_libraries(quadsim vrep_sim quad_ctrl ${LCM_LIBRARIES})
 
 # Add executables
 #add_executable(quadsim_demo quadsim_demo.cpp)
