--- a/pc/control/src/ctrl_utils/CMakeLists.txt
+++ b/pc/control/src/ctrl_utils/CMakeLists.txt
@@ -5,20 +5,21 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 #find_package(OpenCV REQUIRED)
 
 set(CTRL_UTILS_LOG_SRC )
-if(ENABLE_G3LOG)
+if(ENABLE_LOGGING)
 	set(CTRL_UTILS_LOG_SRC
 	    logging/logging_helper.cpp
 	    )
-endif(ENABLE_G3LOG)
+endif(ENABLE_LOGGING)
 
 # Add libraries
 set(CTRL_UTILS_LIB_SRC
-    # vis
-    #vis/quadvis_data_transmitter.cpp
+    # param
 )
+if(ENABLE_LOGGING)
 add_library(ctrl_utils STATIC ${CTRL_UTILS_LIB_SRC} ${CTRL_UTILS_LOG_SRC})
-#add_definitions(-DENABLE_G3LOG)
-target_link_libraries(ctrl_utils g3logger ${LCM_LIBRARIES})
+target_link_libraries(ctrl_utils g3logger)
+endif(ENABLE_LOGGING)
+
 
 # Add executables
 #add_executable(test_logging logging/tests/test_logging.cpp)
