--- a/pc/control/src/quad_solo_sim/CMakeLists.txt
+++ b/pc/control/src/quad_solo_sim/CMakeLists.txt
@@ -12,11 +12,11 @@ set(QUADSIM_LIB_SRC
     quad_solo_sim_controller.cpp
 )
 add_library(quadsolosim STATIC ${QUADSIM_LIB_SRC})
-if (ENABLE_G3LOG)
-	add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255 -DENABLE_LOG)
-else (ENABLE_G3LOG)
+if (ENABLE_LOGGING)
+	add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255 -DENABLE_G3LOG)
+else (ENABLE_LOGGING)
 	add_definitions(-DNON_MATLAB_PARSING -DMAX_EXT_API_CONNECTIONS=255)
-endif (ENABLE_G3LOG)
+endif (ENABLE_LOGGING)
 target_link_libraries(quadsolosim vrep_sim quad_ctrl ${LCM_LIBRARIES})
 
 # Add executables
