adjusted sim for hummingbird, cleaned up code

--- a/pc/control/CMakeLists.txt
+++ b/pc/control/CMakeLists.txt
@@ -22,6 +22,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 add_subdirectory(src/ctrl_utils)
 add_subdirectory(src/vrep_sim)
 add_subdirectory(src/quad_ctrl)
-add_subdirectory(src/quad_sim)
+add_subdirectory(src/quad_hbird_sim)
 add_subdirectory(src/quad_solo_sim)
 add_subdirectory(src/apps)
