--- a/pc/control/src/quad_hbird_sim/CMakeLists.txt
+++ b/pc/control/src/quad_hbird_sim/CMakeLists.txt
@@ -8,8 +8,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../vrep_sim/vrep_lib/remoteApi)
 
 # Add libraries
 set(QUADSIM_LIB_SRC
-    quad_sim_client.cpp
-    quad_sim_controller.cpp
+    quad_hbird_sim_client.cpp
+    quad_hbird_sim_controller.cpp
 )
 add_library(quadsim STATIC ${QUADSIM_LIB_SRC})
 if (ENABLE_LOGGING)
