--- a/pc/control/src/quad_ctrl/CMakeLists.txt
+++ b/pc/control/src/quad_ctrl/CMakeLists.txt
@@ -23,7 +23,7 @@ set(QUADCON_LIB_SRC
 )
 add_library(quad_ctrl STATIC ${QUADCON_LIB_SRC})
 if (ENABLE_LOGGING)
-  add_definitions(-DENABLE_LOG)
+  add_definitions(-DENABLE_G3LOG)
   target_link_libraries(quad_ctrl ctrl_utils g3logger ${LCM_LIBRARIES})
 else(ENABLE_LOGGING)
   target_link_libraries(quad_ctrl ${LCM_LIBRARIES})
