--- a/pc/control/src/apps/CMakeLists.txt
+++ b/pc/control/src/apps/CMakeLists.txt
@@ -10,6 +10,9 @@ target_link_libraries(quadsim_hbird_demo quadsim quad_ctrl)
 add_executable(quadsim_path_repair quadsim_path_repair.cpp)
 target_link_libraries(quadsim_path_repair quadsim quad_ctrl)
 
+add_executable(quadsim_hbird_pos_step quadsim_hbird_pos_step.cpp)
+target_link_libraries(quadsim_hbird_pos_step quadsim quad_ctrl)
+
 # Apps based on 3DR Solo
 add_executable(quadsim_solo_demo quadsim_solo_demo.cpp)
 target_link_libraries(quadsim_solo_demo quadsolosim quad_ctrl)
