fixed more bugs, still needs more work

--- a/pc/planning/src/apps/CMakeLists.txt
+++ b/pc/planning/src/apps/CMakeLists.txt
@@ -12,7 +12,12 @@ if (NOT GUROBI_FOUND)
   message("Gurobi not found. If you want to use Gurobi, set the GUROBI_HOME variable")
 else()
   add_executable(quadsim_pr_planner quadsim_planner.cpp)
-  target_link_libraries(quadsim_pr_planner map path_repair ${OpenCV_LIBS} ${LCM_LIBRARIES})
+    if (ENABLE_LOGGING)
+      add_definitions(-DENABLE_G3LOG)
+      target_link_libraries(quadsim_pr_planner map path_repair ctrl_utils g3logger ${OpenCV_LIBS} ${LCM_LIBRARIES}) 
+    else(ENABLE_LOGGING)
+      target_link_libraries(quadsim_pr_planner map path_repair ${OpenCV_LIBS} ${LCM_LIBRARIES})
+    endif (ENABLE_LOGGING)  
 endif()
 
 add_executable(map_gen map_gen.cpp)
