--- a/pc/planning/src/nav_field/CMakeLists.txt
+++ b/pc/planning/src/nav_field/CMakeLists.txt
@@ -17,8 +17,8 @@ target_link_libraries(nav_field geometry)# ${OpenCV_LIBS} ${LCM_LIBRARIES})
 #add_executable(graph_combine_exp tests/graph_combine_exp.cpp)
 #target_link_libraries(graph_combine_exp map local3d utils ${Octomap_LIBS} ${LCM_LIBRARIES})
 
-add_executable(test_calc tests/test_calc.cpp)
-target_link_libraries(test_calc nav_field map vis ${OpenCV_LIBS})
+#add_executable(test_calc tests/test_calc.cpp)
+#target_link_libraries(test_calc nav_field map vis ${OpenCV_LIBS})
 
 add_executable(test_navfield tests/test_navfield.cpp)
 target_link_libraries(test_navfield map vis ${OpenCV_LIBS})
