--- a/pc/planning/src/path_repair/CMakeLists.txt
+++ b/pc/planning/src/path_repair/CMakeLists.txt
@@ -21,9 +21,9 @@ set(PATH_REPAIR_LIB_SRC
 add_library(path_repair STATIC ${PATH_REPAIR_LIB_SRC})
 if (ENABLE_LOGGING)
   add_definitions(-DENABLE_G3LOG)
-  target_link_libraries(path_repair map local3d planner utils polyopt quadflat mission ctrl_utils g3logger ${OpenCV_LIBS} ${Octomap_LIBS} ${LCM_LIBRARIES})
+  target_link_libraries(path_repair map local3d utils polyopt quadflat mission ctrl_utils g3logger ${OpenCV_LIBS} ${Octomap_LIBS} ${LCM_LIBRARIES})
 else(ENABLE_LOGGING)
-  target_link_libraries(path_repair map local3d planner utils polyopt quadflat mission ${OpenCV_LIBS} ${Octomap_LIBS} ${LCM_LIBRARIES})
+  target_link_libraries(path_repair map local3d utils polyopt quadflat mission ${OpenCV_LIBS} ${Octomap_LIBS} ${LCM_LIBRARIES})
 endif (ENABLE_LOGGING)
 
 # Add executables
