--- a/pc/planning/src/apps/CMakeLists.txt
+++ b/pc/planning/src/apps/CMakeLists.txt
@@ -29,4 +29,6 @@ target_link_libraries(map_gen map vis ${OpenCV_LIBS})
 add_executable(map_param map_param.cpp)
 target_link_libraries(map_param geometry vis ${OpenCV_LIBS} ${LCM_LIBRARIES})
 
+add_executable(local_analysis local_analysis.cpp)
+target_link_libraries(local_analysis map vis nav_field ${OpenCV_LIBS})
 
