--- a/pc/planning/src/path_repair/CMakeLists.txt
+++ b/pc/planning/src/path_repair/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 # Add libraries
 set(PATH_REPAIR_LIB_SRC
     quad_path_repair.cpp
+    geo_mark_graph.cpp
     #waypoint_manager.cpp
 )
 add_library(path_repair STATIC ${PATH_REPAIR_LIB_SRC})
@@ -32,11 +33,11 @@ endif (ENABLE_LOGGING)
 
 add_executable(test_combiner tests/test_combiner.cpp)
 add_definitions(-DENABLE_G3LOG)
-target_link_libraries(test_combiner map geometry local3d polyopt quadflat utils g3logger ${Octomap_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(test_combiner map geometry local3d polyopt quadflat utils g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 add_executable(test_combinerv2 tests/test_combiner_v2.cpp)
 add_definitions(-DENABLE_G3LOG)
-target_link_libraries(test_combinerv2 map geometry local3d polyopt quadflat utils g3logger ${Octomap_LIBS} ${LCM_LIBRARIES})
+target_link_libraries(test_combinerv2 map geometry local3d polyopt quadflat utils g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 add_executable(test_tracking tests/test_tracking.cpp)
 target_link_libraries(test_tracking polyopt quadflat utils ${LCM_LIBRARIES})
