--- a/pc/planning/src/nav_field/CMakeLists.txt
+++ b/pc/planning/src/nav_field/CMakeLists.txt
@@ -25,3 +25,9 @@ target_link_libraries(test_navfield map vis ${OpenCV_LIBS})
 
 add_executable(test_navfield2 tests/test_navfield2.cpp)
 target_link_libraries(test_navfield2 map vis nav_field ${OpenCV_LIBS})
+
+add_executable(test_navfield3 tests/test_navfield3.cpp)
+target_link_libraries(test_navfield3 map vis nav_field ${OpenCV_LIBS})
+
+add_executable(test_navfield4 tests/test_navfield4.cpp)
+target_link_libraries(test_navfield4 map vis nav_field ${OpenCV_LIBS})
